<resources>
    <string name="app_name">Vvmsh</string>
    <string name="app_title">VivaMais SH</string>
    <string name="lorem_ipsum_titulo">Lorem ipsum dolor sit amet</string>
    <string name="lorem_ipsum_grande">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing </string>
    <string name="lorem_ipsum_texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="lorem_ipsum_texto_pequeno">consectetur adipiscing</string>
    <string name="lorem_ipsum_numero">290346</string>
    <string name="lorem_ipsum_data">29-03-2046</string>
    <string name="sem_dados"></string>
    <string name="acao_formacao">Ação de formação</string>
    <string name="areaRecomendacao">Área / Recomendação</string>
    <string name="avancar">Avançar</string>
    <string name="atividades_executadas">Atividades Executadas</string>
    <string name="av_gravidade">Av. Gravidade</string>
    <string name="atividade_pendente">Atividade Pendente</string>
    <string name="atividades_pendentes">Atividades Pendentes</string>
    <string name="anomalia">Anomalia</string>
    <string name="atualizacao">Atualização</string>
    <string name="atualizacao_sh">Atualização SH</string>
    <string name="atualizacao_v">Atualização v </string>
    <string name="cliente">Cliente</string>
    <string name="cross_selling">Cross Selling</string>
    <string name="conta_corrente">Conta Corrente</string>
    <string name="conta_corrente_nif_">Conta Corrente para o nif:</string>
    <string name="concluir_atividade_executada">Concluir actividade executada</string>
    <string name="concluir_atividade_nao_executada">Concluir actividade não executada</string>
    <string name="data">Data</string>
    <string name="data_">Data:</string>
    <string name="dias">Dias</string>
    <string name="dias_">Dias:</string>
    <string name="dimensao_">Dimensão:</string>
    <string name="recarregar_trabalho_dia">Recarregar trabalho do dia</string>
    <string name="recarregar_trabalho_dia_sa">Recarregar trabalho do dia SA</string>
    <string name="recarregar_trabalho_dia_sht">Recarregar trabalho do dia SHT</string>
    <string name="atualizar_trabalho_dia">Atualizar trabalho do dia</string>
    <string name="recarregar_trabalho">Recarregar trabalho</string>
    <string name="download">Download</string>
    <string name="download_trabalho">Download do trabalho</string>
    <string name="download_trabalho_dia_">Download do trabalho do dia:</string>
    <string name="recarregar_trabalho_dia_">Recarregar trabalho do dia:</string>
    <string name="estado_">Estado:</string>
    <string name="estado">Estado</string>
    <string name="frequencia">Frequência</string>
    <string name="fiscalizado__pergunta">Fiscalizado?</string>
    <string name="gravidade">Gravidade</string>
    <string name="iniciar">Iniciar</string>
    <string name="informacao">Informação</string>
    <string name="informacao_cliente">Informação do cliente</string>
    <string name="incidencia">Incidência</string>
    <string name="indices">Índices</string>
    <string name="indices_de_sinistralidade_ano">Índices de Sinistralidade / Ano</string>
    <string name="n_total_de_horas_trabalhadas">Nº total de horas trabalhadas</string>
    <string name="n_de_faltas_horas">Nº de faltas (horas)</string>
    <string name="n_horas_ano_trabalhador">Nº horas / ano / trabalhador</string>
    <string name="n_total_de_trabalhadores">Nº total de trabalhadores</string>
    <string name="n_de_dias_perdidos">Nº de dias perdidos</string>
    <string name="n_de_acidentes_de_trabalho">Nº de acidentes de trabalho</string>
    <string name="observacao_">Observação:</string>
    <string name="observacao">Observação</string>
    <string name="produtos">Produtos</string>
    <string name="relatorio_">Relatório:</string>
    <string name="recarregar_tipo">Recarregar tipo</string>
    <string name="sinaletica">Sinalética</string>
    <string name="sinistralidade">Sinistralidade</string>
    <string name="tarefa_bloqueada">Tarefa bloqueada</string>
    <string name="tipo_">Tipo:</string>
    <string name="tipos">Tipos</string>
    <string name="validar_email_desbloquear">Valide o email para desbloquear a tarefa</string>
    <string name="key_versao_app">chave_versao</string>
    <string name="key_ultima_atualizacao">chave_ultima_atualizacao</string>
    <string name="key_permissoes">key_permissoes</string>
    <string name="key_entrar_contacto">key_entrar_contacto</string>
    <string name="argumento_id">id</string>
    <string name="argumento_id_tipo">idTipo</string>
    <string name="argumento_id_atividade">idAtividade</string>
    <string name="argumento_id_formando">idFormando</string>
    <string name="argumento_id_colaborador">idColaborador</string>
    <string name="argumento_id_levantamento">idLevantamento</string>
    <string name="argumento_descricao">descricao</string>
    <string name="argumento_tipo_relatorio">tipoRelatorio</string>
    <string name="argumento_id_relatorio">idRelatorio</string>
    <string name="argumento_id_avaliacao">idAvaliacao</string>
    <string name="argumento_configuracao_pesquisa">configuracaoPesquisa</string>
    <string name="argumento_origem_relatorio">origemRelatorio</string>
    <string name="argumento_registo_area">registoArea</string>
    <string name="argumento_galeria">galeria</string>
    <string name="resultado_imagem">imagem</string>
    <string name="resultado_pesquisa">pesquisa</string>
    <string name="resultado_pesquisa_descricao">descricao</string>
    <string name="resultado_homologado">homologado</string>
    <string name="onboardingWelcomeContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="onboardingSpinWinContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="onboardingRecommenderContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="onboarding_welcome_3">Welcome 3</string>
    <string name="onboarding_welcome_2">Welcome 2</string>
    <string name="onboarding_welcome_1">Welcome</string>
    <string name="autenticacao">Autenticação</string>
    <string name="aplicacao">Aplicação</string>
    <string name="bi_cartao_de_cidadao_">BI / Cartão de cidadão:</string>
    <string name="fiscalizado_">Fiscalizado:</string>
    <string name="fim">Fim</string>
    <string name="formando">Formando</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="data_execucao">Data de execução</string>
    <string name="dias_fiscalizacao__valor">1</string>
    <string name="departamento_">Departamento:</string>
    <string name="dados_da_formacao">Dados da Formação</string>
    <string name="designacao">Designação</string>
    <string name="designacao_">Designação:</string>
    <string name="contrato_">Contrato:</string>
    <string name="cancelar">Cancelar</string>
    <string name="configuracao">Configuração</string>
    <string name="marca_">Marca:</string>
    <string name="historico_">Historico:</string>
    <string name="quantidade_">Quantidade:</string>
    <string name="email">Email</string>
    <string name="gravar">Gravar</string>
    <string name="ocorrencia">Ocorrência</string>
    <string name="ocorrencias">Ocorrências</string>
    <string name="local">Local</string>
    <string name="local_">Local:</string>
    <string name="inicio">Inicio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genero">Género</string>
    <string name="minutos">Minutos</string>
    <string name="concluir_atividade">Concluir atividade</string>
    <string name="utilizadores_teste">Utilizadores de teste</string>
    <string name="identificador">Identificador</string>
    <string name="palavra_chave">Palavra-chave</string>
    <string name="numero">Numero</string>
    <string name="cap">CAP</string>
    <string name="tecnico_higiene_seguranca">Técnico de higiene e segurança</string>
    <string name="numero_de_registos_">Numero de registos:</string>
    <string name="ultima_atualizacao_">Última atualização:</string>
    <string name="geral">Geral</string>
    <string name="versao">Versão</string>
    <string name="ultima_atualizacao">Última atualização</string>
    <string name="permissoes">Permissões</string>
    <string name="definicoes">Definições</string>
    <string name="permissao_necessaria_aceder_definicoes">A app necessita de permissão para usar esta funcionalidade. A permissão pode ser concedida nas definições.</string>
    <string name="entrar_contacto">Entrar em contacto</string>
    <string name="versao_">Versão:</string>
    <string name="nova_versao_disponivel_versao_">Nova versão disponivel para atualização. Versão:</string>
    <string name="terminar">Terminar</string>
    <string name="calendario">Calendário</string>
    <string name="opcoes_avancadas">Opções avançadas</string>
    <string name="perfil">Perfil</string>
    <string name="terminar_sessao">Terminar sessão</string>
    <string name="upload">Upload</string>
    <string name="atualizar_app">Atualizar App</string>
    <string name="opcoes_trabalho">Opções de trabalho</string>
    <string name="registos">registos</string>
    <string name="_registos">Registos</string>
    <string name="ordem_">Ordem:</string>
    <string name="marca_ordem">Marca / Ordem</string>
    <string name="saldo_cartao_vivamais">Saldo no cartão vivamais</string>
    <string name="ordem">Ordem</string>
    <string name="morada">Morada</string>
    <string name="nif">Nif</string>
    <string name="cae_atividade">Cae/Atividade</string>
    <string name="responsavel">Responsavel</string>
    <string name="telefone">Telefone</string>
    <string name="servico">Serviço</string>
    <string name="novo_contrato">Novo contrato</string>
    <string name="notas">Notas</string>
    <string name="anomalias">Anomalias</string>
    <string name="segmento">Segmento</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="tarefas_realizar">Tarefas a realizar</string>
    <string name="consultar_registar">Consultar / Registar</string>
    <string name="consultar">Consultar</string>
    <string name="contactos">Contactos</string>
    <string name="numero_do_cliente">Número do cliente</string>
    <string name="n_cliente">Nº Cliente</string>
    <string name="endereco">Endereço</string>
    <string name="email_endereco_invalido">Endereço inválido</string>
    <string name="formacao">Formação</string>
    <string name="detalhe">Detalhe</string>
    <string name="editar">Editar</string>
    <string name="demitir">Demitir</string>
    <string name="readmitir">Readmitir</string>
    <string name="remover">Remover</string>
    <string name="ni">NI </string>
    <string name="ut">U.T</string>
    <string name="categoriasRisco">Categorias de risco</string>
    <string name="locaisRisco_">Locais de risco: </string>
    <string name="resposta">Resposta</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="eliminar_checklist_dados">Ao eliminar a checklist irá perder todos os dados registados</string>
    <string name="comercio">Comércio</string>
    <string name="industria">Industria</string>
    <string name="restauracao">Restauração</string>
</resources>