<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/configuracao">

        <Preference
            android:key="@string/key_permissoes"
            android:title="@string/permissoes"
            android:summary="@string/lorem_ipsum_texto"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/aplicacao">


        <Preference
            android:key="@string/key_versao_app"
            android:title="@string/versao"
            android:summary="@string/lorem_ipsum_numero"/>


        <Preference
            android:key="@string/key_ultima_atualizacao"
            android:title="@string/ultima_atualizacao"
            android:summary="@string/lorem_ipsum_data"/>




    </PreferenceCategory>

</PreferenceScreen>