<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.autenticacao.AutenticacaoActivity">

    <item  android:id="@+id/item_perfil"
        android:title="@string/perfil"/>

    <item  android:id="@+id/item_opcoes_trabalho"
        android:title="@string/opcoes_trabalho"/>

    <item  android:id="@+id/item_definicoes"
        android:title="@string/definicoes"/>

    <item  android:id="@+id/item_opcoes_avancadas"
        android:title="@string/opcoes_avancadas"/>

    <item  android:id="@+id/item_terminar_sessao"
        android:title="@string/terminar_sessao"/>


    <item  android:id="@+id/item_atualizar_app"
        android:title="@string/atualizar_app"
        app:showAsAction="always"
        android:icon="@drawable/ic_lorem_ipsum_24dp"/>

    <item  android:id="@+id/item_upload_dados"
        android:title="@string/upload"
        app:showAsAction="always"
        android:icon="@drawable/ic_upload_24dp"/>

</menu>