<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="8dp" >

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox android:id="@+id/chk_box_produto"
            android:text="@string/lorem_ipsum_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>



    <LinearLayout android:id="@+id/lnr_lyt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="32dp"
        android:gravity="center_vertical">


        <TextView android:text="@string/dimensao_"
            style="@style/txt_rotulo"
            android:layout_width="wrap_content"/>

        <TextView android:id="@+id/txt_dimensao"
            android:text="@string/lorem_ipsum_numero"
            style="@style/txt_texto"
            android:layout_marginLeft="12dp"/>


        <TextView android:text="@string/tipo_"
            style="@style/txt_rotulo"
            android:layout_width="wrap_content"
            android:layout_marginLeft="60dp"/>

        <TextView android:id="@+id/txt_tipo"
            android:text="@string/lorem_ipsum_texto_pequeno"
            style="@style/txt_texto"
            android:layout_marginLeft="12dp"/>


    </LinearLayout>


</LinearLayout>