<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:cardCornerRadius="5dp"
        card_view:cardUseCompatPadding="true"
        android:foreground="?android:attr/selectableItemBackground" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/txt_descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_titulo"
                android:textSize="19sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/lnr_lyt_numero_registos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_below="@id/txt_descricao"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/numero_de_registos_"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/txt_numero_registos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_numero"
                    android:textSize="13sp"
                    android:layout_marginLeft="12dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_below="@id/lnr_lyt_numero_registos"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ultima_atualizacao_"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/txt_ultima_atualizacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_data"
                    android:textSize="13sp"
                    android:layout_marginLeft="12dp"/>
            </LinearLayout>



        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</FrameLayout >