<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    tools:context=".ui.ocorrencias.RegistoOcorrenciasActivity">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ocorrencia"
        style="@style/InputLabel" />

    <Spinner
        android:id="@+id/spnr_ocorrencia"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:prompt="@string/anomalia"
        android:spinnerMode="dropdown"
        android:padding="10dp"
        style="@style/Widget.AppCompat.Spinner.Underlined"/>


    <TextView
        android:id="@+id/txt_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_texto"
        android:textSize="15sp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_lorem_ipsum_24dp"/>


    <!-- ..............lista............... -->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcl_registos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</LinearLayout>