<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="java.util.List"/>


        <variable
            name="viewmodel"
            type="com.vvm.sh.ui.tarefa.TarefaViewModel"/>

        <variable
            name="listener"
            type="com.vvm.sh.ui.tarefa.adaptadores.OnTarefaListener"/>

    </data>


    <LinearLayout
        style="@style/temaDialogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white_93">



        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent.TextLayout"
            android:hint="@string/endereco"
            android:layout_width="450dp"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_inp_email"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:text="@{viewmodel.tarefaDia.obterEnderecoEmail()}"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            style="@style/textoInput"
            android:layout_marginTop="25dp" />


        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spnr_email"
            app:tipos_="@{viewmodel.opcoesEmail}"
            app:email="@{viewmodel.tarefaDia.email}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>



    </LinearLayout>

</layout>
